# libffmpegio

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ffmpegAVFrameBufferInterfaces.h  ffmpegAVFrameDoubleBuffer.h  ffmpegAVFrameQueue.h  ffmpegAVFrameStack.h  ffmpegFormatInput.h  ffmpegImageUtils.h  ffmpegMediaHandlers.h  ffmpegReader.h  ffmpegReaderMT.h  ffmpegReaderRev.h  ffmpegStream.cpp  ffmpegStream.h  ffmpegStreamInput.h  ffmpegStreamOutput.h  ffmpegTimeUtil.h  ffmpegVideoReader.h
src/filter/: CMakeLists.txt  ffmpegFilterGraph.cpp  ffmpegFilterGraph.h  ffmpegFilterSinks.cpp  ffmpegFilterSinks.h
src/sandbox/: CMakeLists.txt
