file(GLOB LIBFFMPEG_FILTERSRCS "*.cpp")
file(GLOB HEADERFILES LIST_DIRECTORIES FALSE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.h")

target_sources(objlib PRIVATE ${LIBFFMPEG_FILTERSRCS}
                      PUBLIC ${HEADERFILES})

if (LIBFFMPEGIO_INSTALL_DEV)
    if (LIBFFMPEGIO_INSTALL_HEADER_DEST)
        set(FILTERS_HEADERDEST ${LIBFFMPEGIO_INSTALL_HEADER_DEST}/filter)
    else()
        set(FILTERS_HEADERDEST ${CMAKE_INSTALL_INCLUDEDIR}/filter)
    endif()
    install(FILES ${HEADERFILES} DESTINATION ${FILTERS_HEADERDEST})
endif()
